# eim-svn

./: ChangeLog  Makefile.am  SConstruct  TODO  configure.ac
data/themes/default/: Makefile.am  default.edc  default.edj
data/themes/default/macros/: button.inc
data/themes/default/parts/: main.edc
data/themes/default/programs/: main.edc
doc/: Makefile.am  eim.doxygen  mainpage.dxt
src/: Makefile.am  SConscript  conf.h  eim.c  main.c
src/core/: Makefile.am  account_properties.c  account_properties.h  conf.c  conf.h  eim.c  eim.h
src/egxp/: Makefile.am  SConscript  egxp.c  egxp.h  egxp_child_node.c  egxp_child_node.h  egxp_condition.c  egxp_condition.h  egxp_conditional_node.c  egxp_conditional_node.h  egxp_connection.c  egxp_connection.h  egxp_message.c  egxp_message.h  egxp_node.c  egxp_node.h  egxp_node_struct.h  egxp_opcode.c  egxp_opcode.h  egxp_protocol_handler.c  egxp_protocol_handler.h  test.c
src/gui/: Makefile.am  SConscript  gui_main.c  gui_main.h  properties.c  properties.h
src/xmpp/: Makefile.am  SConscript  sha1.c  sha1.h  test.c  xmpp.c  xmpp.h  xmpp_auth.c  xmpp_auth.h  xmpp_callback.c  xmpp_callback.h  xmpp_jid.c  xmpp_jid.h  xmpp_message.c  xmpp_message.h  xmpp_opcode.c  xmpp_opcode.h  xmpp_presence.c  xmpp_presence.h  xmpp_struct.h
src/xmpp-im/: Makefile.am  SConscript  test.c  xmpp_im.c  xmpp_im.h  xmpp_im_callback.c  xmpp_im_callback.h  xmpp_im_contact.c  xmpp_im_contact.h  xmpp_im_opcode.c  xmpp_im_opcode.h  xmpp_im_roster.c  xmpp_im_roster.h  xmpp_im_struct.h
